Trivial refactoring