@@ -92,8 +92,8 @@ public class StatementBlock
     public StatementBlock(List<Statement> stmts)
         {
         this(stmts, null,
-                stmts.isEmpty() ? 0L : stmts.get(0).getStartPosition(),
-                stmts.isEmpty() ? 0L : stmts.get(stmts.size()-1).getEndPosition());
+                stmts.isEmpty() ? 0L : stmts.getFirst().getStartPosition(),
+                stmts.isEmpty() ? 0L : stmts.getLast().getEndPosition());
         }
 
     public StatementBlock(List<Statement> stmts, long lStartPos, long lEndPos)
